--- a/index.html
+++ b/index.html
@@ -15,6 +15,18 @@
 
 <body>
 
+    <div class="main-body">
+        <div class="result">
+            <p lang="ja" id="result-name" class="result-name">トータル・エクリプス 2035 ～少女の時空皆既日食～</p>
+        </div>
+        <div class="roll">
+            <button id="roll-button" class="roll-button">抽选曲目</button>
+        </div>
+        <div class="footer">
+            <p>ver 0.0.1</p>
+        </div>
+    </div>
+
 </body>
 
 </html>
