--- a/index.html
+++ b/index.html
@@ -17,13 +17,14 @@
 
     <div class="main-body">
         <div class="result">
-            <p lang="ja" id="result-name" class="result-name">トータル・エクリプス 2035 ～少女の時空皆既日食～</p>
-            <p id="result-name-cn" class="result-name-cn">中文名</p>
-            <p class="result-level"><span id="result-level-name">鬼</span>：★x <span id="result-level-num">8</span>
+            <p lang="ja" id="result-name" class="result-name">またさいたま2000</p>
+            <p id="result-name-cn" class="result-name-cn">复埼玉2000</p>
+            <p class="result-level"><span id="result-category">Namco原创</span> - <span id="result-level-name">鬼</span>：★x
+                <span id="result-level-num">10</span>
             </p>
         </div>
         <div class="roll">
-            <button id="roll-button" class="roll-button">抽选曲目</button>
+            <button id="roll-button" class="roll-button" disabled>抽选曲目</button>
         </div>
         <div class="option">
             <button id="option-button" class="option-button">条件设置</button>
@@ -34,7 +35,8 @@
                     id="option-show-level-num-max">0</span></p>
         </div>
         <div class="footer">
-            <p>ver 0.0.1</p>
+            <p>Dirty but work!</p>
+            <p>ver 0.1-20191023</p>
         </div>
     </div>
 
@@ -44,16 +46,16 @@
                 <h2 class="option-main-title">条件设置</h2>
                 <h3 class="option-title">包含难度</h3>
                 <div class="level-select">
-                    <input type="checkbox" class="level-input easy" name="level" id="level-easy" value="梅"">
+                    <input type="radio" class="level-input easy" name="level" id="level-easy" value="easy">
                     <label for=" level-easy" class="level-label">梅</label>
 
-                    <input type="checkbox" class="level-input normal" name="level" id="level-normal" value="竹">
+                    <input type="radio" class="level-input normal" name="level" id="level-normal" value="normal">
                     <label for="level-normal" class="level-label">竹</label>
 
-                    <input type="checkbox" class="level-input hard" name="level" id="level-hard" value="松">
+                    <input type="radio" class="level-input hard" name="level" id="level-hard" value="hard">
                     <label for="level-hard" class="level-label">松</label>
 
-                    <input type="checkbox" class="level-input oni" name="level" id="level-oni" value="鬼">
+                    <input type="radio" class="level-input oni" name="level" id="level-oni" value="oni" checked>
                     <label for="level-oni" class="level-label">鬼</label>
                 </div>
 
