--- a/index.html
+++ b/index.html
@@ -36,6 +36,7 @@
         </div>
         <div class="footer">
             <p>Dirty but work!</p>
+            <p>未加防呆设置，错误的参数会导致设备卡顿！</p>
             <p>ver 0.1-20191023</p>
         </div>
     </div>
