新增新基准的14歌单，先保存一下

--- a/index.html
+++ b/index.html
@@ -17,10 +17,10 @@
 
     <div class="main-body">
         <div class="result">
-            <p lang="ja" id="result-name" class="result-name">またさいたま2000</p>
-            <p id="result-name-cn" class="result-name-cn">复埼玉2000</p>
-            <p class="result-level"><span id="result-category">Namco原创</span> - <span id="result-level-name">鬼</span>：★x
-                <span id="result-level-num">10</span>
+            <p lang="ja" id="result-name" class="result-name">先设置才能抽奖</p>
+            <p id="result-name-cn" class="result-name-cn">没加防呆，请勿乱填</p>
+            <p class="result-level"><span id="result-category">没有分类</span> - <span id="result-level-name">难度</span>：★x
+                <span id="result-level-num">99</span>
             </p>
         </div>
         <div class="roll">
