--- a/index.html
+++ b/index.html
@@ -30,14 +30,15 @@
             <button id="option-button" class="option-button">条件设置</button>
         </div>
         <div class="option-show">
-            <p><strong>抽取难度</strong>：<span id="option-show-level">未设置</span></p>
+            <p><strong>抽取难度</strong>：<span id="option-show-difficulty">未设置</span></p>
             <p><strong>抽取星级</strong>：<span id="option-show-level-num-min">0</span> ~ <span
                     id="option-show-level-num-max">0</span></p>
+            <p><strong>歌单选择</strong>：<span id="option-show-songlist">未选择</span></p>
         </div>
         <div class="footer">
             <p>Dirty but work!</p>
             <p>未加防呆设置，错误的参数会导致设备卡顿！</p>
-            <p>ver 0.1-20191023</p>
+            <p>ver 0.2-20191024</p>
         </div>
     </div>
 
@@ -70,6 +71,18 @@
                     <label for="level-num-min" class="level-num-label">最高等级：</label>
                     <input type="number" class="level-num-input" name="level-num-max" id="level-num-max" min="1"
                         max="10" step="1" placeholder="1~10" required>
+                </div>
+
+                <h3 class="option-title">曲目列表选择</h3>
+                <div class="songlist-selection">
+                    <input type="radio" name="songlist-select" id="songlist-taiko14old" value="taiko14old"
+                        class="songlist-selection-input">
+                    <label for="songlist-taiko14old" class="songlist-selection-label taiko14old">旧框 14 旧基准</label>
+
+                    <input type="radio" name="songlist-select" id="songlist-taiko14new" value="taiko14new"
+                        class="songlist-selection-input" checked>
+                    <label for="songlist-taiko14new" class="songlist-selection-label taiko14new">旧框 14
+                        <strong>新</strong>基准</label>
                 </div>
                 <button id="close-option" class="option-button">保存设置</button>
             </form>
