加入摸摸衣裸SP歌单，http 跳 https

--- a/index.html
+++ b/index.html
@@ -14,7 +14,11 @@
 </head>
 
 <body>
-
+    <script>
+        if (location.protocol != 'https:') {
+            location.href = 'https:' + window.location.href.substring(window.location.protocol.length);
+        }
+    </script>
     <div class="main-body">
         <div class="result">
             <p lang="ja" id="result-name" class="result-name">先设置才能抽奖</p>
@@ -38,7 +42,7 @@
         <div class="footer">
             <p>Dirty but work!</p>
             <p>未加防呆设置，错误的参数会导致设备卡顿！</p>
-            <p>ver 0.2-20191024</p>
+            <p>ver 0.30-20191118</p>
         </div>
     </div>
 
@@ -80,9 +84,14 @@
                     <label for="songlist-taiko14old" class="songlist-selection-label taiko14old">旧框 14 旧基准</label>
 
                     <input type="radio" name="songlist-select" id="songlist-taiko14new" value="taiko14new"
-                        class="songlist-selection-input" checked>
+                        class="songlist-selection-input">
                     <label for="songlist-taiko14new" class="songlist-selection-label taiko14new">旧框 14
                         <strong>新</strong>基准</label>
+
+                    <input type="radio" name="songlist-select" id="songlist-taikomomoiroSP" value="taikomomoiroSP"
+                        class="songlist-selection-input" checked>
+                    <label for="songlist-taikomomoiroSP"
+                        class="songlist-selection-label taiko-momoiroSP">摸摸衣裸SP（20191118整理）</label>
                 </div>
                 <button id="close-option" class="option-button">保存设置</button>
             </form>
