更新摸摸衣裸的翻译

--- a/index.html
+++ b/index.html
@@ -15,9 +15,9 @@
 
 <body>
     <script>
-        if (location.protocol != 'https:') {
-            location.href = 'https:' + window.location.href.substring(window.location.protocol.length);
-        }
+        // if (location.protocol != 'https:') {
+        //     location.href = 'https:' + window.location.href.substring(window.location.protocol.length);
+        // }
     </script>
     <div class="main-body">
         <div class="result">
@@ -42,7 +42,9 @@
         <div class="footer">
             <p>Dirty but work!</p>
             <p>未加防呆设置，错误的参数会导致设备卡顿！</p>
-            <p>ver 0.30-20191118</p>
+            <p>ver 0.30-20191130</p>
+            <p>回报问题邮箱：im#maimoe.in</p>
+            <p>或者全国群 &#47; 电姐群 <strong>@Eiko.</strong></p>
         </div>
     </div>
 
@@ -91,7 +93,7 @@
                     <input type="radio" name="songlist-select" id="songlist-taikomomoiroSP" value="taikomomoiroSP"
                         class="songlist-selection-input" checked>
                     <label for="songlist-taikomomoiroSP"
-                        class="songlist-selection-label taiko-momoiroSP">摸摸衣裸SP（20191118整理）</label>
+                        class="songlist-selection-label taiko-momoiroSP">摸摸衣裸SP（20191130整理）</label>
                 </div>
                 <button id="close-option" class="option-button">保存设置</button>
             </form>
