1. 更新 RedSP 2. 增加 json 载入版本参数

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
         <div class="footer">
             <p>Dirty but work!</p>
             <p>未加防呆设置，错误的参数会导致设备卡顿！</p>
-            <p>ver 0.30-20191130</p>
+            <p>ver 0.31-20191210</p>
             <p>回报问题邮箱：im#maimoe.in</p>
             <p>或者全国群 &#47; 电姐群 <strong>@Eiko.</strong></p>
         </div>
@@ -91,9 +91,14 @@
                         <strong>新</strong>基准</label>
 
                     <input type="radio" name="songlist-select" id="songlist-taikomomoiroSP" value="taikomomoiroSP"
-                        class="songlist-selection-input" checked>
+                        class="songlist-selection-input">
                     <label for="songlist-taikomomoiroSP"
                         class="songlist-selection-label taiko-momoiroSP">摸摸衣裸SP（20191130整理）</label>
+
+                    <input type="radio" name="songlist-select" id="songlist-taikoRedSP" value="taikoRedSP"
+                        class="songlist-selection-input" checked>
+                    <label for="songlist-taikoRedSP"
+                        class="songlist-selection-label taiko-RedSP">RedSP（20191210整理）</label>
                 </div>
                 <button id="close-option" class="option-button">保存设置</button>
             </form>
