更新曲目列表

--- a/index.html
+++ b/index.html
@@ -7,10 +7,10 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>太鼓曲目抽奖页面</title>
     <link rel="shortcut icon" href="./favicon.ico">
-    <link rel="stylesheet" href="./static/css/normalize.css">
-    <link rel="stylesheet" href="./static/css/style.css">
+    <link rel="stylesheet" href="./static/css/normalize.css?ver=8.0.1">
+    <link rel="stylesheet" href="./static/css/style.css?ver=1">
     <script src="./static/js/jquery-3.4.1.min.js"></script>
-    <script src="./static/js/script.js"></script>
+    <script src="./static/js/script.js?ver=2019122301"></script>
 </head>
 
 <body>
@@ -42,7 +42,7 @@
         <div class="footer">
             <p>Dirty but work!</p>
             <p>未加防呆设置，错误的参数会导致设备卡顿！</p>
-            <p>ver 0.31-20191210</p>
+            <p>ver 0.31-20191223</p>
             <p>回报问题邮箱：im#maimoe.in</p>
             <p>或者全国群 &#47; 电姐群 <strong>@Eiko.</strong></p>
         </div>
@@ -98,7 +98,7 @@
                     <input type="radio" name="songlist-select" id="songlist-taikoRedSP" value="taikoRedSP"
                         class="songlist-selection-input" checked>
                     <label for="songlist-taikoRedSP"
-                        class="songlist-selection-label taiko-RedSP">RedSP（20191210整理）</label>
+                        class="songlist-selection-label taiko-RedSP">RedSP（20191223整理）</label>
                 </div>
                 <button id="close-option" class="option-button">保存设置</button>
             </form>
