--- a/index.html
+++ b/index.html
@@ -8,13 +8,14 @@
     <title>太鼓曲目抽奖页面</title>
     <link rel="shortcut icon" href="./favicon.ico">
     <link rel="stylesheet" href="./static/css/normalize.css?ver=8.0.1">
-    <link rel="stylesheet" href="./static/css/style.css?ver=1">
+    <link rel="stylesheet" href="./static/css/style.css?ver=2019122302">
     <script src="./static/js/jquery-3.4.1.min.js"></script>
-    <script src="./static/js/script.js?ver=2019122301"></script>
+    <script src="./static/js/script.new.js?ver=2019122302"></script>
 </head>
 
 <body>
     <script>
+        // https 网页内跳转，能 HSTS 的就最好不用这个啦
         // if (location.protocol != 'https:') {
         //     location.href = 'https:' + window.location.href.substring(window.location.protocol.length);
         // }
@@ -42,9 +43,8 @@
         <div class="footer">
             <p>Dirty but work!</p>
             <p>未加防呆设置，错误的参数会导致设备卡顿！</p>
-            <p>ver 0.31-20191223</p>
-            <p>回报问题邮箱：im#maimoe.in</p>
-            <p>或者全国群 &#47; 电姐群 <strong>@Eiko.</strong></p>
+            <p>ver 0.40-20191223</p>
+            <p><a href="https://github.com/eiko-g/taiko-roll" target="_blank">GayHub</a></p>
         </div>
     </div>
 
@@ -54,29 +54,29 @@
                 <h2 class="option-main-title">条件设置</h2>
                 <h3 class="option-title">包含难度</h3>
                 <div class="level-select">
-                    <input type="radio" class="level-input easy" name="level" id="level-easy" value="easy">
+                    <input type="radio" class="level-input easy" name="抽取难度" id="level-easy" value="easy">
                     <label for="level-easy" class="level-label">梅</label>
 
-                    <input type="radio" class="level-input normal" name="level" id="level-normal" value="normal">
+                    <input type="radio" class="level-input normal" name="抽取难度" id="level-normal" value="normal">
                     <label for="level-normal" class="level-label">竹</label>
 
-                    <input type="radio" class="level-input hard" name="level" id="level-hard" value="hard">
+                    <input type="radio" class="level-input hard" name="抽取难度" id="level-hard" value="hard">
                     <label for="level-hard" class="level-label">松</label>
 
-                    <input type="radio" class="level-input oni" name="level" id="level-oni" value="oni" checked>
+                    <input type="radio" class="level-input oni" name="抽取难度" id="level-oni" value="oni" checked>
                     <label for="level-oni" class="level-label">鬼</label>
                 </div>
 
                 <h3 class="option-title">包含等级</h3>
                 <div class="level-num">
                     <label for="level-num-min" class="level-num-label">最低等级：</label>
-                    <input type="number" class="level-num-input" name="level-num-min" id="level-num-min" min="1"
-                        max="10" step="1" placeholder="1~10" required>
+                    <input type="number" class="level-num-input" name="最低等级" id="level-num-min" min="1" max="10"
+                        step="1" placeholder="1~10" required>
                 </div>
                 <div class="level-num">
                     <label for="level-num-min" class="level-num-label">最高等级：</label>
-                    <input type="number" class="level-num-input" name="level-num-max" id="level-num-max" min="1"
-                        max="10" step="1" placeholder="1~10" required>
+                    <input type="number" class="level-num-input" name="最高等级" id="level-num-max" min="1" max="10"
+                        step="1" placeholder="1~10" required>
                 </div>
 
                 <h3 class="option-title">曲目列表选择</h3>
@@ -95,7 +95,7 @@
                     <label for="songlist-taikomomoiroSP"
                         class="songlist-selection-label taiko-momoiroSP">摸摸衣裸SP（20191130整理）</label>
 
-                    <input type="radio" name="songlist-select" id="songlist-taikoRedSP" value="taikoRedSP"
+                    <input type="radio" name="已选歌单" id="songlist-taikoRedSP" value="taikoRedSP"
                         class="songlist-selection-input" checked>
                     <label for="songlist-taikoRedSP"
                         class="songlist-selection-label taiko-RedSP">RedSP（20191223整理）</label>
