忘记改链接了丢

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="./static/css/normalize.css?ver=8.0.1">
     <link rel="stylesheet" href="./static/css/style.css?ver=2019122302">
     <script src="./static/js/jquery-3.4.1.min.js"></script>
-    <script src="./static/js/script.new.js?ver=2019122302"></script>
+    <script src="./static/js/script.js?ver=2019122302"></script>
 </head>
 
 <body>
