修正旧歌单选择炸了的问题

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
         <div class="footer">
             <p>Dirty but work!</p>
             <p>未加防呆设置，错误的参数会导致设备卡顿！</p>
-            <p>ver 0.40-20200109</p>
+            <p>ver 0.40-2020010902</p>
             <p><a href="https://github.com/eiko-g/taiko-roll" target="_blank">GayHub</a></p>
         </div>
     </div>
@@ -81,16 +81,16 @@
 
                 <h3 class="option-title">曲目列表选择</h3>
                 <div class="songlist-selection">
-                    <input type="radio" name="songlist-select" id="songlist-taiko14old" value="taiko14old"
+                    <input type="radio" name="已选歌单" id="songlist-taiko14old" value="taiko14old"
                         class="songlist-selection-input">
                     <label for="songlist-taiko14old" class="songlist-selection-label taiko14old">旧框 14 旧基准</label>
 
-                    <input type="radio" name="songlist-select" id="songlist-taiko14new" value="taiko14new"
+                    <input type="radio" name="已选歌单" id="songlist-taiko14new" value="taiko14new"
                         class="songlist-selection-input">
                     <label for="songlist-taiko14new" class="songlist-selection-label taiko14new">旧框 14
                         <strong>新</strong>基准</label>
 
-                    <input type="radio" name="songlist-select" id="songlist-taikomomoiroSP" value="taikomomoiroSP"
+                    <input type="radio" name="已选歌单" id="songlist-taikomomoiroSP" value="taikomomoiroSP"
                         class="songlist-selection-input">
                     <label for="songlist-taikomomoiroSP"
                         class="songlist-selection-label taiko-momoiroSP">摸摸衣裸SP（20191130整理）</label>
