修正页面，加回 14 新基准

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
         <link rel="stylesheet" href="./static/css/normalize.css?ver=8.0.1" />
         <link rel="stylesheet" href="./static/css/style.css?ver=2019122302" />
         <!-- <script src="./static/js/jquery-3.4.1.min.js"></script> -->
-        <script src="./static/js/script.js?ver=2020070901"></script>
+        <script src="./static/js/script.js?ver=2020070902"></script>
     </head>
 
     <body>
@@ -67,7 +67,7 @@
             <div class="footer">
                 <p>Dirty but work!</p>
                 <p>未加防呆设置，错误的参数会导致设备卡顿！</p>
-                <p>ver 0.50-2020070901</p>
+                <p>ver 0.50-2020070902</p>
                 <p>
                     <a
                         href="https://github.com/eiko-g/taiko-roll"
@@ -88,7 +88,7 @@
                         <input
                             type="radio"
                             class="level-input easy"
-                            name="抽取难度"
+                            name="难度"
                             id="level-easy"
                             value="easy"
                         />
@@ -97,7 +97,7 @@
                         <input
                             type="radio"
                             class="level-input normal"
-                            name="抽取难度"
+                            name="难度"
                             id="level-normal"
                             value="normal"
                         />
@@ -106,7 +106,7 @@
                         <input
                             type="radio"
                             class="level-input hard"
-                            name="抽取难度"
+                            name="难度"
                             id="level-hard"
                             value="hard"
                         />
@@ -157,6 +157,11 @@
                         />
                     </div>
 
+                    <!-- <h3 class="option-title">选择分类</h3>
+                    <div class="select-category">
+                        <div id="category-list" class="category-list"></div>
+                    </div> -->
+
                     <h3 class="option-title">曲目列表选择</h3>
                     <div class="songlist-selection">
                         <!-- <input
@@ -173,7 +178,7 @@
                             旧框 14 旧基准
                         </label> -->
 
-                        <!-- <input
+                        <input
                             type="radio"
                             name="歌单"
                             id="songlist-taiko14new"
@@ -187,7 +192,7 @@
                             旧框 14
                             <strong>新</strong>
                             基准
-                        </label> -->
+                        </label>
 
                         <!-- <input
                             type="radio"
