简陋的分类筛选做好了（吧）

--- a/index.html
+++ b/index.html
@@ -157,10 +157,16 @@
                         />
                     </div>
 
-                    <!-- <h3 class="option-title">选择分类</h3>
+                    <h3 class="option-title">选择分类</h3>
                     <div class="select-category">
                         <div id="category-list" class="category-list"></div>
-                    </div> -->
+                        <input
+                            type="button"
+                            id="select-all-cat"
+                            class="select-all-cat"
+                            value="我全都要"
+                        />
+                    </div>
 
                     <h3 class="option-title">曲目列表选择</h3>
                     <div class="songlist-selection">
