--- a/index.html
+++ b/index.html
@@ -21,19 +21,21 @@
         </script>
         <div class="main-body">
             <div class="result">
-                <p lang="ja" id="result-name" class="result-name">
-                    先设置才能抽奖
-                </p>
-                <p id="result-name-cn" class="result-name-cn">
-                    没加防呆，请勿乱填
-                </p>
-                <p class="result-level">
-                    <span id="result-category">没有分类</span>
-                    -
-                    <span id="result-level-name">难度</span>
-                    ：★x
-                    <span id="result-level-num">99</span>
-                </p>
+                <div class="result-inner">
+                    <p lang="ja" id="result-name" class="result-name">
+                        先设置才能抽奖
+                    </p>
+                    <p id="result-name-cn" class="result-name-cn">
+                        没加防呆，请勿乱填
+                    </p>
+                    <p class="result-level">
+                        <span id="result-category">没有分类</span>
+                        -
+                        <span id="result-level-name">难度</span>
+                        ：★x
+                        <span id="result-level-num">99</span>
+                    </p>
+                </div>
             </div>
             <div class="roll">
                 <button id="roll-button" class="roll-button" disabled>
@@ -67,7 +69,7 @@
             <div class="footer">
                 <p>Dirty but work!</p>
                 <p>未加防呆设置，错误的参数会导致设备卡顿！</p>
-                <p>ver 0.50-2020070902</p>
+                <p>ver 0.51-2020071001</p>
                 <p>
                     <a
                         href="https://github.com/eiko-g/taiko-roll"
@@ -160,11 +162,12 @@
                     <h3 class="option-title">选择分类</h3>
                     <div class="select-category">
                         <div id="category-list" class="category-list"></div>
+                        <p class="tips">不选择等于全都要</p>
                         <input
                             type="button"
                             id="select-all-cat"
                             class="select-all-cat"
-                            value="我全都要"
+                            value="我全都不要"
                         />
                     </div>
 
